# pyssgen

./: .gitignore  LICENCE  README.md  requirements.txt  setup.cfg
pyssgen/: __main__.py  pyssgen.py
pyssgen/data/: diviser-pour-regner.md  oop.md  recursivite.md
pyssgen/static/: styles.css
pyssgen/templates/: base.html  home.html  post.html
