[metadata]
name = pyssgen
version = 1.0.5
author = Kenneth Soares
author_email = kensoares@gmail.com
description = Static site generator built with python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ken-soares/pyssgen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    jinja2
    markdown
    markupsafe
    python-frontmatter
    python-slugify
    pyyaml
    text-unidecode
